docs/css/demo.css
#page-layer #adaptive {
  width: 50%;
  padding-bottom: 50%;
}
#page-layer #adaptivesvg {
  width: 80%;
  height: 120px;
  margin: auto;
  padding: 0;
}
#page-layer #adaptivesvg canvas {
  background-color: #ddd;
}

#page-resolution #adaptive {
  width: 350px;
  height: 350px;
}

#page-resolution #resize {
  width: 50%;
  padding-bottom: 50%;
}

#page-resolution #sticky {
  display: flex;
}

#page-resolution #stickMode {
  width: 50%;
  padding-bottom: 50%;
  border: solid 2px #336;
}

#page-resolution #stickMode canvas {
  background: black;
  border: none;
}

#page-resolution #control {
  width: 50%;
  text-align: right;
  float: right;
}

#box-rect-demo {
  display: flex;
}

#page-boxmodel #box-rect,
#page-boxmodel #box-setting {
  width: 50%;
}

#page-boxmodel #box-setting {
  padding-left: 20px;
}

#page-resource #texturepacker {
  background: black;
}

#page-animations #timeline-ctrl {
  margin-bottom: 10px;
}

